<resources>
    <string name="app_name">test</string>
    <string name="falso">Falso!</string>
    <string name="verdadero">Verdadero</string>
    <string name="textview">TextView</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string-array name="preguntas">
        <item>Bill Gates trabajaba en microsft</item>
        <item>Mark Zuckerberg no creó Facebook</item>
        <item>Steve Jobs era de apple.</item>
    </string-array>
    <string-array name="respuestas">
        <item>true</item>
        <item>false</item>
        <item>true</item>
    </string-array>
</resources>
